Made JVM options more visible